--- a/src/app/player-table/player-table.component.html
+++ b/src/app/player-table/player-table.component.html
@@ -10,7 +10,7 @@
       <thead>
         <tr>
           <th>Name</th>
-          <th>Last Name</th> 
+          <th>Last Name</th>
           <th>Positions</th>
           <th>Weight</th>
           <th>Height</th>
@@ -18,23 +18,23 @@
           <th>Left Footed</th>
           <th>Actions</th>
         </tr>
-      </thead> 
+      </thead>
     </table>
   </div>
   <div class="tbl-content-player">
     <table cellpadding="0" cellspacing="0" border="0">
       <tbody>
-        <tr *ngFor="let player of (players$ | async)">
-          <th>{{player.name}}</th>
-          <th>{{player.lastName}}</th>
-          <th>{{player.position}}</th>
-          <th>{{player.weight}}</th>
-          <th>{{player.height}}</th>
-          <th>{{player.nationality}}</th>
-          <th>{{player.leftFooted}}</th>
+        <tr *ngFor="let player of players$ | async">
+          <th>{{ player.name }}</th>
+          <th>{{ player.lastName }}</th>
+          <th>{{ player.position }}</th>
+          <th>{{ player.weight }}</th>
+          <th>{{ player.height }}</th>
+          <th>{{ player.nationality }}</th>
+          <th>{{ player.leftFooted }}</th>
           <th>
             <button class="submit" (click)="editPlayer(player)">Edit</button>
-            <button>Delete</button>
+            <button class="submit" (click)="deletePlayer(player)">Delete</button>
           </th>
         </tr>
       </tbody>
